Fix search results dropdown overflow

--- a/app/assets/stylesheets/api/image_index.scss
+++ b/app/assets/stylesheets/api/image_index.scss
@@ -94,10 +94,6 @@
   word-break: break-all;
 }
 
-.comment-item > article > strong {
-  font-weight: bolder;
-}
-
 .add-like-comment > li:last-child {
   width: 100%;
 }
